support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_using_not.i
%module xxx

int blah;
using namespace blah;





